[gd_scene load_steps=4 format=3 uid="uid://bsxw6h2nq3r8f"]

[ext_resource type="Script" path="res://src/ui/GameHUD.gd" id="1_hud"]
[ext_resource type="PackedScene" uid="uid://cs5y3mn2jk8p2" path="res://src/ui/scenes/TutorialOverlay.tscn" id="2_tutorial"]
[ext_resource type="PackedScene" uid="uid://c8vq7rw3xm2kb" path="res://src/ui/scenes/InteractionProgressBar.tscn" id="3_progress"]

[node name="GameHUD" type="CanvasLayer" groups=["hud"]]
process_mode = 3
script = ExtResource("1_hud")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TopBar" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MoneyLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer/TopBar"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
bbcode_enabled = true
fit_content = true
scroll_active = false
text = "$0.00"

[node name="TimeLabel" type="Label" parent="MarginContainer/VBoxContainer/TopBar"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "05:00"
horizontal_alignment = 1

[node name="ReputationBar" type="ProgressBar" parent="MarginContainer/VBoxContainer/TopBar"]
custom_minimum_size = Vector2(200, 30)
layout_mode = 2
size_flags_horizontal = 3
max_value = 100.0
value = 100.0
show_percentage = false

[node name="OrdersPanel" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/OrdersPanel"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HeaderBar" type="HBoxContainer" parent="MarginContainer/VBoxContainer/OrdersPanel/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/OrdersPanel/VBoxContainer/HeaderBar"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 28
text = "Active Orders"

[node name="ToggleButton" type="Button" parent="MarginContainer/VBoxContainer/OrdersPanel/VBoxContainer/HeaderBar"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Hide"

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/OrdersPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="OrdersList" type="VBoxContainer" parent="MarginContainer/VBoxContainer/OrdersPanel/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="BottomBar" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HeldItemLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer/BottomBar"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
bbcode_enabled = true
fit_content = true
scroll_active = false
text = ""

[node name="HintLabel" type="Label" parent="MarginContainer/VBoxContainer/BottomBar"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 16
text = "H - Help | E - Interact | LMB - Pickup/Drop | P - Shop | ESC - Pause"
horizontal_alignment = 2

[node name="TutorialOverlay" parent="." instance=ExtResource("2_tutorial")]

[node name="InteractionProgressBar" parent="." instance=ExtResource("3_progress")]
visible = false
